Validación, Registro Actividad y Mensajes error

--- a/mvc/views/public/login.html
+++ b/mvc/views/public/login.html
@@ -18,15 +18,6 @@ $def with (mensaje)
     <div class="custom-grid">
       <div class="custom-col">
         <h1>Inicia Sesión</h1>
-        $if mensaje is not None:
-          <div class="alert alert-danger d-flex align-items-center" role="alert">
-            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:">
-              <use xlink:href="#exclamation-triangle-fill" />
-            </svg>
-            <div>
-            $mensaje
-            </div>
-          </div>
         <form method="post">
           <div class="mb-3">
             <label for="email" class="form-label">Correo Electrónico</label>
@@ -40,8 +31,16 @@ $def with (mensaje)
         </form>
       </div>
     </div>
+    $if mensaje is not None:
+      <div class="alert alert-danger d-flex align-items-center" role="alert">
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="20" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+          <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"></path>
+        </svg>
+        <div>
+          $mensaje
+        </div>
+      </div>
   </div>
-
 
   <!-- JavaScript de Bootstrap 5 -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
