--- a/mvc/views/admin/lista_pozos.html
+++ b/mvc/views/admin/lista_pozos.html
@@ -1,4 +1,3 @@
-$def with(pozos)
 <!DOCTYPE html>
 <html lang="es">
 
@@ -13,6 +12,7 @@ $def with(pozos)
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/lista_pozos.css">
+  <script src="/static/js/card.js"></script>
 </head>
 
 <body>
@@ -44,107 +44,79 @@ $def with(pozos)
 
       <div class="dashboard-content px-3 pt-4">
         <h1 class="titulo">Lista de Pozos</h1>
-        <div class="container text-center">
-          <div class="row row-cols-md-3">
-            $for pozo in pozos:
-              <div class="col">
-                <input type="hidden" name="idpozo" value="$pozo.key()">
-                <input type="hidden" id="estado" value="$pozo.val().get('estado_pozo').get('estado')">
-                <div class="flip-card">
-                  <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                      <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                          <img src="/static/img/gotas.png" class="gota">
-                          <h5 class="card-title">$pozo.val().get('nombre')</h5>
-                          $if pozo.val().get('estado_pozo').get('estado') == 0:
-                            <p class="card-text" style="color: red;"><b>Estado: </b>Apagado</p>
-                          $else:
-                            <p class="card-text" style="color: green;"><b>Estado: </b> Encendido</p>
-                          $if pozo.val().get('estado_pozo').get('electricidad') == 0:
-                            <p class="card-text" style="color: red;"><b>Electricidad: </b>Apagado</p>
-                          $else:
-                            <p class="card-text" style="color: green;"><b>Electricidad: </b>Si</p>
-                          <div class="d-grid gap-2">
-                            $if pozo.val().get('estado_pozo').get('estado') == 0:
-                              <button class="btn btn-success" type="button" id="btn_control" value="$pozo.key()"><i
-                                class="bi bi-power"></i></button>
-                            $else:
-                              <button class="btn btn-danger" type="button" id="btn_control" value="$pozo.key()"><i
-                                class="bi bi-power"></i></button>
-                            <button class="btn btn-info" id="btn_flip">Mas información</button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="flip-card-back">
-                      <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                          <img src="/static/img/gotas.png" class="gota">
-                          <h5 class="card-title">$pozo.val().get('nombre')</h5>
-                          <p class="card-text"><b>Convenio: </b> $pozo.val().get('convenio')</p>
-                          <p class="card-text"><b>Concesión: </b> $pozo.val().get('concesion')</p>
-                          <p class="card-text"><b>Ubicación: </b> $pozo.val().get('ubicacion')</p>
-                          <p class="card-text"><b>Informacion extra: </b> $pozo.val().get('informacion')</p>
-                          <button class="btn btn-dark" id="btn_flip2">Regresar</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <a class="btn btn-primary generar" href="/admin/generar-pozo" role="button">Generar nuevo Pozo</a>
+        <a class="btn btn-primary generar" href="/admin/generar-pozo" role="button">Generar nuevo Pozo</a>
+        <div class="container-flip-card" id="container-flip-card-body">
+          
         </div>
       </div>
     </div>
   </div>
+
   <!-- Scripts Menu -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   <script src="../../../static/js/scripts.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getDatabase, ref, update, child, get, push } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
-
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyDSNosUdU1keJfy1LiUWLRHt28xMvFolXo",
-      authDomain: "sienapa-734e9.firebaseapp.com",
-      databaseURL: "https://sienapa-734e9-default-rtdb.firebaseio.com",
-      projectId: "sienapa-734e9",
-      storageBucket: "sienapa-734e9.appspot.com",
-      messagingSenderId: "538109518725",
-      appId: "1:538109518725:web:cc5781087804a219ed5aec"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const dbref = ref(db);
-    let estado = document.getElementById('estado').value;
-
-    function setData(id) {
-      if (estado == 0) {
-        update(ref(db, 'data/pozos/' + id + '/estado_pozo'), {
-          estado: 1
-        });
-        estado = 1;
-        console.log("Encendido");
-      } else {
-        update(ref(db, 'data/pozos/' + id + '/estado_pozo'), {
-          estado: 0
-        });
-        estado = 0;
-        console.log("Apagado");
+  <script>
+      function flipCard(id) {
+        var flipCard = document.querySelector("." + id);
+        flipCard.classList.toggle('flipped');
       }
-    }
+    </script>
+    <script>
+      window.onload = function () {
+        addCard();
+      };
+    </script>
+    <script>
+      function powerClick(id) {
+        var key = id;
+        var firebase = "https://sienapa-734e9-default-rtdb.firebaseio.com/data/pozos/";
+        var json = "/estado_pozo/";
+        var end = ".json";
+        var url = firebase + key + json + end;
 
-    document.getElementById('btn_control').addEventListener('click', function () {
-      const id = this.value;
-      setData(id);
-    });
-  </script>
+        console.log(url);
+
+        const request = new XMLHttpRequest();
+
+        request.onload = function () {
+          if (request.status >= 200 && request.status < 300) {
+            const data = JSON.parse(request.responseText);
+            const currentState = data.estado;
+            const newState = currentState === "Encendido" ? "Apagado" : "Encendido";
+
+            const updateData = {
+              "estado": newState
+            };
+
+            const updateString = JSON.stringify(updateData);
+
+            const updateRequest = new XMLHttpRequest();
+
+            updateRequest.onload = function () {
+              if (updateRequest.status >= 200 && updateRequest.status < 300) {
+                console.log("Estado actualizado con éxito:", newState);
+                //location.reload();
+                document.getElementById(key).value = newState;
+                // Aquí puedes realizar cualquier acción adicional que desees después de actualizar el estado en la base de datos.
+              } else {
+                console.error("Error al actualizar el estado:", updateRequest.status, updateRequest.responseText);
+              }
+            };
+
+            updateRequest.open("PATCH", url);
+            updateRequest.send(updateString);
+
+            // Mostrar solo el valor del estado en la consola
+            console.log("Nuevo estado:", newState);
+          } else {
+            console.error("Error al obtener el estado actual:", request.status, request.responseText);
+          }
+        };
+
+        request.open("GET", url);
+        request.send();
+      }
+    </script>
 </body>
-
 </html>
