--- a/mvc/views/operador/lista_pozos.html
+++ b/mvc/views/operador/lista_pozos.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <link rel="stylesheet" href="/static/css/lista_pozos.css">
+  <script src="/static/js/card.js"></script>
 </head>
 
 <body>
@@ -22,9 +23,11 @@
       </div>
       <ul class="list-unstyled px-2">
         <li class="active"><a href="/operador/lista-pozos" class="text-decoration-none px-3 py-2 d-block">Pozos</a></li>
-        <li class=""><a href="/operador/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a></li>
+        <li class=""><a href="/operador/control-pozo" class="text-decoration-none px-3 py-2 d-block">Control Remoto</a>
+        </li>
         <li class=""><a href="/operador/lista-usuarios" class="text-decoration-none px-3 py-2 d-block">Usuarios</a></li>
-        <li class=""><a href="/operador/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a></li>
+        <li class=""><a href="/operador/generar-reporte" class="text-decoration-none px-3 py-2 d-block">Reportes</a>
+        </li>
         <li class="salir"><a href="/logout" class="text-decoration-none px-3 py-2 d-block">Salir</a></li>
       </ul>
     </div>
@@ -39,62 +42,83 @@
           </div>
         </div>
       </nav>
-
+      
       <div class="dashboard-content px-3 pt-4">
         <h1 class="titulo">Lista de Pozos</h1>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                    <img src="/static/img/gotas.png" class="gota">
-                    <h5 class="card-title">Pozo de Valle Verde</h5>
-                    <p class="card-text"><b>Estado: </b> Encendido</p>
-                    <p class="card-text"><b>Electricidad: </b>Si</p>
-                    <div class="d-grid gap-2">
-                      <button class="btn btn-success" type="button"><i class="bi bi-power"></i></button>
-                      <button class="btn btn-info" onclick="flipCard()">Mas información
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="flip-card-back">
-                <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                    <img src="/static/img/gotas.png" class="gota">
-                    <h5 class="card-title">Pozo de Valle Verde</h5>
-                    <p class="card-text"><b>Convenio: </b> 0123456789</p>
-                    <p class="card-text"><b>Concesión: </b> 0987654321</p>
-                    <p class="card-text"><b>Ubicación: </b> 7.558742369° 5.1598842125°</p>
-                    <p class="card-text"><b>Informacion extra: </b> Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.</p>
-                    <button class="btn btn-dark" onclick="flipCard()">Regrear</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          
+        <div class="container-flip-card" id="container-flip-card-body">
+
+        </div>
       </div>
     </div>
   </div>
-  <!-- Scripts Menu -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <script>
-    $('.open-btn').click(function () {
-      $('.sidebar').addClass('active');
-    });
-    $('.close-btn').click(function () {
-      $('.sidebar').removeClass('active');
-    });
-  </script>
-  <script>
-    function flipCard() {
-      var flipCard = document.querySelector('.flip-card');
-      flipCard.classList.toggle('flipped');
-    }
-  </script>
+
+    <!-- Scripts Menu -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../../../static/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script>
+      function flipCard(id) {
+        var flipCard = document.querySelector("." + id);
+        flipCard.classList.toggle('flipped');
+      }
+    </script>
+    <script>
+      window.onload = function () {
+        addCard();
+      };
+    </script>
+    <script>
+      function powerClick(id) {
+        var key = id;
+        var firebase = "https://sienapa-734e9-default-rtdb.firebaseio.com/data/pozos/";
+        var json = "/estado_pozo/";
+        var end = ".json";
+        var url = firebase + key + json + end;
+
+        console.log(url);
+
+        const request = new XMLHttpRequest();
+
+        request.onload = function () {
+          if (request.status >= 200 && request.status < 300) {
+            const data = JSON.parse(request.responseText);
+            const currentState = data.estado;
+            const newState = currentState === "Encendido" ? "Apagado" : "Encendido";
+
+            const updateData = {
+              "estado": newState
+            };
+
+            const updateString = JSON.stringify(updateData);
+
+            const updateRequest = new XMLHttpRequest();
+
+            updateRequest.onload = function () {
+              if (updateRequest.status >= 200 && updateRequest.status < 300) {
+                console.log("Estado actualizado con éxito:", newState);
+                //location.reload();
+                document.getElementById(key).value = newState;
+                // Aquí puedes realizar cualquier acción adicional que desees después de actualizar el estado en la base de datos.
+              } else {
+                console.error("Error al actualizar el estado:", updateRequest.status, updateRequest.responseText);
+              }
+            };
+
+            updateRequest.open("PATCH", url);
+            updateRequest.send(updateString);
+
+            // Mostrar solo el valor del estado en la consola
+            console.log("Nuevo estado:", newState);
+          } else {
+            console.error("Error al obtener el estado actual:", request.status, request.responseText);
+          }
+        };
+
+        request.open("GET", url);
+        request.send();
+      }
+    </script>
 
 </body>
+
 </html>
