--- a/static/css/generar_reporte.css
+++ b/static/css/generar_reporte.css
@@ -21,3 +21,27 @@
     text-align: center;
     margin-bottom: 20px;
   }
+
+  label{
+    font-size: 14px;
+    color: #fff;
+  }
+
+  .col-md-4{
+    text-align: center;
+  }
+
+  .col-md-4 a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  .btn{
+    width: 180px;
+    margin-bottom: 100px;
+  }
+
+  .form-control{
+    text-align: center;
+  }
