--- a/static/css/generar_reporte.css
+++ b/static/css/generar_reporte.css
@@ -1,4 +1,4 @@
-.container {
+  .container {
     margin-top: 20px;
   }
   
@@ -37,11 +37,68 @@
     font-size: 18px;
   }
 
-  .btn{
+  #generar{
     width: 180px;
     margin-bottom: 100px;
   }
 
   .form-control{
     text-align: center;
+  }
+
+  .title{
+    color: #fff;
+  }
+
+  @media (max-width: 767px){
+    .container {
+      margin-top: 10px;
+    }
+    
+    .form-group {
+      margin-bottom: 5px;
+    }
+    
+    .btn-generate {
+      display: block;
+    }
+    
+    .download-link {
+      display: block;
+      margin-top: 5px;
+      color: white;
+    }
+    
+    .title {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+  
+    label{
+      font-size: 14px;
+      color: #fff;
+    }
+  
+    .col-md-4{
+      text-align: center;
+    }
+  
+    .col-md-4 a{
+      color: #fff;
+      text-decoration: none;
+      font-size: 18px;
+    }
+  
+    #generar{
+      width: 180px;
+      margin-bottom: 30px;
+    }
+  
+    .form-control{
+      text-align: center;
+    }
+
+    .title{
+      color: #000;
+    }
   }
