--- a/mvc/views/admin/generar_reporte.html
+++ b/mvc/views/admin/generar_reporte.html
@@ -44,7 +44,7 @@ $def with (total_fallas=None, url=None)
       <div class="dashboard-content px-3 pt-4">
         <div class="container">
           <h1>Generar reporte de fallas</h2>
-          <form class="row g-3 justify-content-evenly" method="post">
+          <form class="row g-3 justify-content-evenly" method="POST">
             <div class="row g-3 justify-content-evenly">
               <div class="col-md-4">
                 <label id="fechaInicio">Del:</label>
@@ -71,11 +71,7 @@ $def with (total_fallas=None, url=None)
               <input type="number" value="$total_fallas" class="form-control" readonly>
             </div>
             <div class="col-md-4">
-<<<<<<< HEAD
               <a href="$url">
-=======
-              <a href="#">
->>>>>>> a91404f357c1d705f92706ef8ba9f978df75a46c
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="red"
                   class="bi bi-file-earmark-pdf-fill" viewBox="0 0 16 16">
                   <path
@@ -90,7 +86,6 @@ $def with (total_fallas=None, url=None)
         </div>
       </div>
     </div>
-<<<<<<< HEAD
   </div>
 
   <!-- Scripts Menu -->
@@ -120,12 +115,6 @@ $def with (total_fallas=None, url=None)
     });
 
   </script>
-=======
-    <!-- Scripts Menu -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="../../../static/js/scripts.js"></script>
->>>>>>> a91404f357c1d705f92706ef8ba9f978df75a46c
 </body>
 
 </html>
