--- a/mvc/views/public/login.html
+++ b/mvc/views/public/login.html
@@ -11,10 +11,15 @@ $def with (mensaje)
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
   <link rel="stylesheet" href="/static/css/login.css">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  
 </head>
 
 <body>
   <div class="grid-container">
+    <header class="logo-container">
+      <img src="static/img/sienapa.png" >
+    </header>
     <div class="custom-grid">
       <div class="custom-col">
         <h1>Inicia Sesión</h1>
@@ -29,6 +34,7 @@ $def with (mensaje)
           </div>
           <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
         </form>
+        <div id="google-signin-button"></div>
       </div>
     </div>
     $if mensaje is not None:
@@ -45,6 +51,20 @@ $def with (mensaje)
   <!-- JavaScript de Bootstrap 5 -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <style>
+    /* Estilos CSS para posicionar los logos */
+    .logo-container {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .logo-container img {
+      width: 20%; /* Ajusta el ancho según tus necesidades */
+      height: auto;
+      margin-bottom: 10px; /* Espacio entre los logos */
+    }
+    
+  </style>
 </body>
 
 </html>
