--- a/static/css/admin-lista-usuarios.css
+++ b/static/css/admin-lista-usuarios.css
@@ -1,5 +1,5 @@
 .titulo {
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     margin-bottom: 30px;
     margin-top: 100px;
@@ -8,6 +8,10 @@
   .container {
     color: white;
     text-align: center;
+  }
+
+  .col h5 {
+    color: black;
   }
   
   .row-titulo {
